--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Arham's Home Page</title>
   </head>
   <body>
-    <h1>Arham Siddiqi testing out</h1>
+    <h1>Arham Siddiqi</h1>
     <h2>CSC 394</h2>
     <h3>Major: Computer Science</h3> 
   </body>
